--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,3 +25,7 @@ jobs:
     
     - uses: azure/k8s-actions/setup-kubectl@master
     - name: Setup kubectl
+    
+    - uses: azure/k8s-actions/setup-kubectl@master
+      with:
+        version: 'latest' 
