--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,7 +10,7 @@ jobs:
  
     steps:
     - uses: actions/setup-python@v1
-    - name: Setup openstack client
+      name: Setup openstack client
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
@@ -20,12 +20,12 @@ jobs:
         pip install python-magnumclient
         
     - uses: azure/k8s-actions/setup-kubectl@master
-    - name: Setup kubectl
+      name: Setup kubectl
       with:
         version: 'latest'   
         
     - uses: actions/checkout@v1
-    - name: Build the Docker image
+      name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     
 
