--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -9,9 +9,8 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-    
-    - uses: actions/setup-python@v1 
     - name: Setup python
+      uses: actions/setup-python@v1 
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
@@ -22,11 +21,11 @@ jobs:
         pip install python-openstackclient
         pip install python-magnumclient
         
-    - uses: azure/k8s-actions/setup-kubectl@master
     - name: Setup kubectl
+      uses: azure/k8s-actions/setup-kubectl@master
       with:
         version: 'latest'   
-        
-    - uses: actions/checkout@v1
-    - name: Build the Docker image
+    
+    - name: Build the Docker image        
+      uses: actions/checkout@v1
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
