--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
+    - name: Git pull
+      uses: actions/checkout@v1
+      
     - name: Setup python
       uses: actions/setup-python@v1 
       with:
@@ -27,5 +30,4 @@ jobs:
         version: 'latest'   
     
     - name: Build the Docker image        
-      uses: actions/checkout@v1
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
