--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,9 +23,20 @@ jobs:
         pip install wheel
         pip install python-openstackclient
         pip install python-magnumclient
-        
+    
+#     - name: Setup k8s context 
+#       run: |
+#         openstack coe cluster list 
+     
     - name: Setup kubectl
-      uses: azure/k8s-actions/setup-kubectl@master
+      run: |
+       apt-get update && sudo apt-get install -y apt-transport-https
+       curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+       echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+       apt-get update
+       apt-get install -y kubectl
+       
+#      uses: azure/k8s-actions/setup-kubectl@master
     
     - name: Build the Docker image        
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
