--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -30,11 +30,11 @@ jobs:
      
     - name: Setup kubectl
       run: |
-       apt-get update && sudo apt-get install -y apt-transport-https
+       sudo apt-get update && sudo apt-get install -y apt-transport-https
        curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
-       apt-get update
-       apt-get install -y kubectl
+       sudo apt-get update
+       sudp apt-get install -y kubectl
        
 #      uses: azure/k8s-actions/setup-kubectl@master
     
