--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,19 @@ jobs:
         pip install wheel
         pip install python-openstackclient
         pip install python-magnumclient
-     
+        
+    - name: Set k8s context
+      run: |
+        openstack coe cluster config ${{ secrets.CLUSTER_NAME }} \
+        --os-auth-url ${{ secrets.URL }} \
+        --os-identity-api-version 3 \
+        --os-project-name ${{ secrets.PROJECT_NAME }} \
+        --os-project-domain-name ${{ secrets.USER_DOMAIN_NAME }} \
+        --os-username ${{ secrets.USERNAME }}
+        --os-user-domain-name ${{ secrets.USER_DOMAIN_NAME }}
+        --os-password ${{ secrets.PASSWORD }}
+        export KUBECONFIG=./config
+
     - name: Setup kubectl
       run: |
        sudo apt-get update && sudo apt-get install -y apt-transport-https
@@ -31,6 +43,10 @@ jobs:
        echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
        sudo apt-get update
        sudo apt-get install -y kubectl
+       
+    - name: Test kubectl
+      run: |
+       kubectl get pods
        
     - name: Build the Docker image        
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
