--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -31,8 +31,8 @@ jobs:
         --os-identity-api-version 3 \
         --os-project-name ${{ secrets.PROJECT_NAME }} \
         --os-project-domain-name ${{ secrets.USER_DOMAIN_NAME }} \
-        --os-username ${{ secrets.USERNAME }}
-        --os-user-domain-name ${{ secrets.USER_DOMAIN_NAME }}
+        --os-username ${{ secrets.USERNAME }} \
+        --os-user-domain-name ${{ secrets.USER_DOMAIN_NAME }} \
         --os-password ${{ secrets.PASSWORD }}
         export KUBECONFIG=./config
 
