--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -46,3 +46,10 @@ jobs:
        sha=${GITHUB_SHA:0:7}
        app="${GITHUB_REPOSITORY#*/}"
        docker build --file Dockerfile -t docker.pkg.github.com/$GITHUB_REPOSITORY/$app:$sha .
+       
+   - name: Push Docker image to Docker Registry ## use token (not password) for Github Package Registry
+     run: |
+       sha=${GITHUB_SHA:0:7}
+       app="${GITHUB_REPOSITORY#*/}"
+       docker login docker.pkg.github.com -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
+       docker push docker.pkg.github.com/$GITHUB_REPOSITORY/$app:$sha
