--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,14 +1,14 @@
 name: Docker Image CI
-
-on: [push]
-
-jobs:
-
+on:
+  push:
+    branches:
+    - master
+jobs:  
   build:
- 
     runs-on: ubuntu-latest
- 
+    
     steps:
+    
     - name: Git pull
       uses: actions/checkout@v1
       
